// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Base 1`] = `
Array [
  <div
    className=""
  >
    <nav
      className="ag ah ai aj ak al am an ao ap aq ar as at au av aw ax"
      data-baseweb="header-navigation"
      role="navigation"
    >
      <div
        className="ak ay az b0 b1 b2 b3 b4"
      >
        <div
          className="b5 b1"
        >
          <a
            href="/"
            onClick={[Function]}
            style={
              Object {
                "textDecoration": "none",
              }
            }
          >
            <h1
              className="b6 ae"
              data-baseweb="block"
            >
              Next Movie
            </h1>
          </a>
        </div>
      </div>
      <div
        className="ak ay az b7 b1 b2 b8 b9"
      />
      <div
        className="ak ay az b0 b1 b2 ba bb"
      >
        <div
          className="bc bd be bf"
          data-baseweb="block"
        >
          <div
            className="ag bg ai bh bi ak bj"
            data-baseweb="input"
          >
            <div
              className="bk ak bj bl bm bn bo bp bq br bs bt ag bg ai bh bi bu bv"
              data-baseweb="base-input"
            >
              <div
                className="ak bw bx"
              >
                <svg
                  className="by bz c0 c1 c2"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-describedby={null}
                aria-invalid={false}
                aria-label={null}
                aria-labelledby={null}
                aria-required={false}
                autoComplete="on"
                className="bk ao c3 c4 c5 bj c6 c7 b6 c8 c9 ca cb ag bg ai bh bi cc cd"
                disabled={false}
                id="typeahead"
                inputMode="text"
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                pattern={null}
                placeholder="Search a movie by title"
                required={false}
                rows={null}
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="b5 b1"
        >
          <button
            className="ce bw b9 c3 c4 cf c5 cg ch bo bp ci cj ck cl cm cn co cp ag ah cq aj bs bt bq br c8 c9 bx cr cs ct cu cv cw"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            Sign In
          </button>
        </div>
        <div
          className="b5 b1"
        />
      </div>
    </nav>
    <div
      className=""
    >
      <div
        className="cx b1 b2 cy cz"
      />
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|CardDeck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="d0 d1"
      data-baseweb="block"
    >
      <h2
        className="d2 ag d3 af d4"
        data-baseweb="block"
      >
        Popular movies
      </h2>
      <div
        className="bj d5 d0 d6"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <ul
          className="d7 d8 d9 bj da ak db dc dd de df"
        >
          <li
            className="dg bk"
          >
            <div
              className="dh bm di dj bq bs br bt dk ci dl dm"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bq bs dn c6"
                src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
              />
              <div
                className="do dp dq dr"
              >
                <h1
                  className="ag d3 cq d4 ds cm cn co dt du dv dw dx dy dz e0 e1 e2"
                >
                  July 26
                </h1>
                <div
                  className="e3 e4 ag bg ai bh"
                />
              </div>
            </div>
          </li>
          <li
            className="dg bk"
          >
            <div
              className="dh bm di dj bq bs br bt dk ci dl dm"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bq bs dn c6"
                src="https://image.tmdb.org/t/p/w500/vqzNJRH4YyquRiWxCCOH0aXggHI.jpg"
              />
              <div
                className="do dp dq dr"
              >
                <h1
                  className="ag d3 cq d4 ds cm cn co dt du dv dw dx dy dz e0 e1 e2"
                >
                  November 1
                </h1>
                <div
                  className="e3 e4 ag bg ai bh"
                />
              </div>
            </div>
          </li>
          <li
            className="dg bk"
          >
            <div
              className="dh bm di dj bq bs br bt dk ci dl dm"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bq bs dn c6"
                src="https://image.tmdb.org/t/p/w500/tBuabjEqxzoUBHfbyNbd8ulgy5j.jpg"
              />
              <div
                className="do dp dq dr"
              >
                <h1
                  className="ag d3 cq d4 ds cm cn co dt du dv dw dx dy dz e0 e1 e2"
                >
                  October 18
                </h1>
                <div
                  className="e3 e4 ag bg ai bh"
                />
              </div>
            </div>
          </li>
          <li
            className="dg bk"
          >
            <div
              className="dh bm di dj bq bs br bt dk ci dl dm"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bq bs dn c6"
                src="https://image.tmdb.org/t/p/w500/p69QzIBbN06aTYqRRiCOY1emNBh.jpg"
              />
              <div
                className="do dp dq dr"
              >
                <h1
                  className="ag d3 cq d4 ds cm cn co dt du dv dw dx dy dz e0 e1 e2"
                >
                  November 8
                </h1>
                <div
                  className="e3 e4 ag bg ai bh"
                />
              </div>
            </div>
          </li>
          <li
            className="dg bk"
          >
            <div
              className="dh bm di dj bq bs br bt dk ci dl dm"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bq bs dn c6"
                src="https://image.tmdb.org/t/p/w500/pIcV8XXIIvJCbtPoxF9qHMKdRr2.jpg"
              />
              <div
                className="do dp dq dr"
              >
                <h1
                  className="ag d3 cq d4 ds cm cn co dt du dv dw dx dy dz e0 e1 e2"
                >
                  October 18
                </h1>
                <div
                  className="e3 e4 ag bg ai bh"
                />
              </div>
            </div>
          </li>
          <li
            className="dg bk"
          >
            <div
              className="dh bm di dj bq bs br bt dk ci dl dm"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bq bs dn c6"
                src="https://image.tmdb.org/t/p/w500/7IiTTgloJzvGI1TAYymCfbfl3vT.jpg"
              />
              <div
                className="do dp dq dr"
              >
                <h1
                  className="ag d3 cq d4 ds cm cn co dt du dv dw dx dy dz e0 e1 e2"
                >
                  October 11
                </h1>
                <div
                  className="e3 e4 ag bg ai bh"
                />
              </div>
            </div>
          </li>
          <li
            className="dg bk"
          >
            <div
              className="dh bm di dj bq bs br bt dk ci dl dm"
              data-baseweb="card"
              onClick={[Function]}
            >
              <img
                className="bq bs dn c6"
                src="https://image.tmdb.org/t/p/w500/jIbTPKCRWgmS2HaafKXeRaPHMGp.jpg"
              />
              <div
                className="do dp dq dr"
              >
                <h1
                  className="ag d3 cq d4 ds cm cn co dt du dv dw dx dy dz e0 e1 e2"
                >
                  November 8
                </h1>
                <div
                  className="e3 e4 ag bg ai bh"
                />
              </div>
            </div>
          </li>
        </ul>
        <button
          className="e5 aq e6 ci e7 e8 e9 ea eb ec ed ee bc ar"
          onClick={[Function]}
        >
          &lt;
        </button>
        <button
          className="e5 aq e6 ci e7 e8 e9 ea eb ec ed ee bc as"
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|HeaderNavigation Base 1`] = `
Array [
  <div
    className=""
  >
    <nav
      className="ag ah ai aj ak al am an ef ap aq ar as at au av aw ax"
      data-baseweb="header-navigation"
      role="navigation"
    >
      <div
        className="ak ay az b0 b1 b2 b3 b4"
      >
        <div
          className="b5 b1"
        >
          <h1
            className="b6 ae"
            data-baseweb="block"
          >
            Next Movie
          </h1>
        </div>
      </div>
      <div
        className="ak ay az b7 b1 b2 b8 b9"
      />
      <div
        className="ak ay az b0 b1 b2 ba bb"
      >
        <div
          className="bc bd be bf"
          data-baseweb="block"
        >
          <div
            className="ag bg ai bh bi ak bj"
            data-baseweb="input"
          >
            <div
              className="bk ak bj bl bm bn bo bp bq br bs bt ag bg ai bh bi bu bv"
              data-baseweb="base-input"
            >
              <div
                className="ak bw bx"
              >
                <svg
                  className="by bz c0 c1 c2"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-describedby={null}
                aria-invalid={false}
                aria-label={null}
                aria-labelledby={null}
                aria-required={false}
                autoComplete="on"
                className="bk ao c3 c4 c5 bj c6 c7 b6 c8 c9 ca cb ag bg ai bh bi cc cd"
                disabled={false}
                inputMode="text"
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                pattern={null}
                placeholder="Search a movie by title"
                required={false}
                rows={null}
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="b5 b1"
        >
          <button
            className="ce bw b9 c3 c4 cf c5 cg ch bo bp ci cj ck cl cm cn co cp ag ah cq aj bs bt bq br c8 c9 bx cr cs ct cu cv cw"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            Sign In
          </button>
        </div>
        <div
          className="b5 b1"
        />
      </div>
    </nav>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Hero Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="bj"
    >
      <div
        className="e5 bj eg d5"
      >
        <div
          className="bj da e5 eh ei"
        />
        <div
          className="e5 ar as e6 ej ek"
        />
        <img
          alt="No backdrop"
          className="bj da el"
          src="https://image.tmdb.org/t/p/original/zTxHf9iIOCqRbxvl8W5QYKrsMLq.jpg"
        />
      </div>
      <div
        className="ak d0 em b1 b2 cy cz"
      >
        <div
          className="en bc eo d5 ep eq"
        >
          <img
            alt="No poster"
            className="bj er"
            src="https://image.tmdb.org/t/p/w500/9Vp8MKqrwRAtvACF7PBwbvdG4dq.jpg"
          />
        </div>
        <div
          className="b7 ak es"
        >
          <div
            className=""
          >
            <h2
              className="et ag eu cq ev e9"
            >
              Jumanji: The Next Level
            </h2>
            <h3
              className="ew ag eb cq d4"
            >
              December 12, 2019
            </h3>
            <div
              className=""
            >
              <button
                className="ce bw b9 c3 c4 cf c5 cg ch bo bp ci cj ck cl cm cn co cp ag ah cq aj bs bt bq br c8 c9 bx cr cs ct cu cv cw"
                data-baseweb="button"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="ak ex"
                >
                  <svg
                    className="by bz c0 ey ez"
                    data-baseweb="icon"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      Plus
                    </title>
                    <path
                      clipRule="evenodd"
                      d="M12 5C12.5523 5 13 5.44772 13 6V11L18 11C18.5523 11 19 11.4477 19 12C19 12.5523 18.5523 13 18 13L13 13V18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18V13L6 13C5.44772 13 5 12.5523 5 12C5 11.4477 5.44771 11 6 11L11 11V6C11 5.44772 11.4477 5 12 5Z"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
                Watchlist
              </button>
              <div
                className="f0 f1"
                data-baseweb="block"
              />
              <button
                className="ce bw b9 c3 c4 cf c5 cg ch bo bp ci cj ck cl cm cn co cp ag ah cq aj bs bt bq br c8 c9 bx cr bi bv f2 f3 f4"
                data-baseweb="button"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="ak ex"
                >
                  <svg
                    className="by bz c0 ey ez"
                    data-baseweb="icon"
                    viewBox="0 0 20 20"
                  >
                    <title>
                      Show
                    </title>
                    <path
                      d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                    />
                  </svg>
                </div>
                More Info
              </button>
            </div>
          </div>
          <div
            className="f5 ak b5 f6 f7"
          >
            <button
              className="e8 f8 ci d0 f9 fa fb fc fd"
              onClick={[Function]}
            >
              <div
                className="bj da e5 eh fe"
              />
              <img
                alt="No backdrop"
                className="bj er"
                src="https://image.tmdb.org/t/p/original/zTxHf9iIOCqRbxvl8W5QYKrsMLq.jpg"
              />
            </button>
            <button
              className="e8 f8 ci d0 f9 fa fb fc fd"
              onClick={[Function]}
            >
              <div
                className="bj da e5 eh ff"
              />
              <img
                alt="No backdrop"
                className="bj er"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
            <button
              className="e8 f8 ci d0 f9 fa fb fc fd"
              onClick={[Function]}
            >
              <div
                className="bj da e5 eh ff"
              />
              <img
                alt="No backdrop"
                className="bj er"
                src="https://image.tmdb.org/t/p/w1280/aZ1ZqJ4uO1RK5gU5jRsO4qG7rJo.jpg"
              />
            </button>
            <button
              className="e8 f8 ci d0 f9 fa fb fc fd"
              onClick={[Function]}
            >
              <div
                className="bj da e5 eh ff"
              />
              <img
                alt="No backdrop"
                className="bj er"
                src="https://image.tmdb.org/t/p/w1280/n3UanIvmnBlH531pykuzNs4LbH6.jpg"
              />
            </button>
            <button
              className="e8 f8 ci d0 f9 fa fb fc fd"
              onClick={[Function]}
            >
              <div
                className="bj da e5 eh ff"
              />
              <img
                alt="No backdrop"
                className="bj er"
                src="https://image.tmdb.org/t/p/w1280/1ZSjrBUHP2jm1QlQEyLGufL289q.jpg"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots components|Login Base 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;
